Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-16633

Flat Light Theme: Missing toolbar borders

XMLWordPrintable

    • a0f1e716c75cb748c462d0cc8d2aec586a08f63c

      The toolbars in the flat light theme require thing borders.

      (Note that the actual color of the border is part of another issue and fix)

        1. MissingToolbarBordersFlatLightTheme.png
          122 kB
          Alessandro Portale
        2. OSXQtC41.jpg
          124 kB
          Adam Strzelecki
        3. OSXQtC42PR.jpg
          177 kB
          Adam Strzelecki
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            portale Alessandro Portale
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes